<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>realsense_ros2_gazebo</name>
  <version>1.2.0</version>

  <description>Intel Realsense Camera Simulations</description>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <author email="marton@neorobot.hu">Marton Juhasz</author>
  <author email="jehontan@gmail.com">Je Hon Tan</author>

  <license>Apache 2.0</license>

  <maintainer email="jehontan@gmail.com">jehontan</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_dev</build_depend> <!-- TODO: check -->

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>gazebo11</exec_depend>

</package>
